Added new field to the Roles: Description Added panel to manage Elections Added panel to manage Users Added option to add/modify number of votes for Candidate Changed the main page and navbar

--- a/eLections/Content/bootstrap-lumen.css
+++ b/eLections/Content/bootstrap-lumen.css
@@ -8561,3 +8561,19 @@ a.list-group-item-danger.active {
 .popover {
     color: #555555;
 }
+
+.right-space {
+    margin-right: 15px;
+}
+.left-space {
+    margin-left: 15px;
+}
+
+.bottom-space {
+    margin-bottom: 15px;
+}
+
+.top-space {
+    margin-top: 15px;
+}
+
