--- a/eLections/Views/Home/Index.cshtml
+++ b/eLections/Views/Home/Index.cshtml
@@ -3,29 +3,24 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <h1>Wybory do sejmu @Html.Raw(DateTime.Today.Year)</h1>
+    @if (User.Identity.IsAuthenticated)
+    {
+        if (User.IsInRole("CanManageElections"))
+        {
+            <p class="lead">Aktualnie trwa głosowanie. Gdy wszystkie głosy zostaną wprowadzone do systemu, będziesz mógł rozpocząć procedurę liczenia głosów. </p>
+            <p><a href="/Elections" class="btn btn-primary btn-lg">Podlicz głosy! &raquo;</a></p>
+        }
+        else
+        {
+            <p class="lead">Aktualnie trwa głosowanie. Gdy głosy w twoim regionie zostaną podliczone dodaj je do systemu w zakładce Kandydaci. </p>
+            <p><a href="/candidates" class="btn btn-primary btn-lg">Głosy &raquo;</a></p>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+        }
+    }
+    else
+    {
+        <p class="lead"> Witaj użytkowniku! Strona jest przeznaczona dla Przewodniczących komisji wyborczych, jeśli jesteś jednym z nich zaloguj się! </p>
+        <p><a href="/Account/Login" class="btn btn-primary btn-lg">Zaloguj się &raquo;</a></p>
+    }
 </div>
