Adding Votes Calculation Adding Helpers Changed Models

--- a/eLections/Views/Lands/LandForm.cshtml
+++ b/eLections/Views/Lands/LandForm.cshtml
@@ -14,6 +14,11 @@
         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Name)
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Seats)
+        @Html.TextBoxFor(m => m.Seats, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Seats)
+    </div>
     @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
