--- a/eLections/Views/Parties/PartyForm.cshtml
+++ b/eLections/Views/Parties/PartyForm.cshtml
@@ -20,6 +20,11 @@
         @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.FullName)
     </div>
+    <div class="checkbox">
+        <label>
+            @Html.CheckBoxFor(m => m.IsCoalition, new { @class = "checkbox" })@Html.LabelFor(m => m.IsCoalition)
+        </label>
+    </div>
 
     @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
