--- a/eLections/Views/Administration/Details.cshtml
+++ b/eLections/Views/Administration/Details.cshtml
@@ -5,9 +5,9 @@
 }
 
 <h2>@Model.UserName</h2>
-<h3>Land: @if (Model.Land != null)
+<h3>Constituency: @if (Model.Constituency != null)
           {
-              @Model.Land;
+              @Model.Constituency;
           }
 </h3>
 <h3>Role List: </h3>
