Added toastr and some small fixes

--- a/eLections/Views/Administration/UsersList.cshtml
+++ b/eLections/Views/Administration/UsersList.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<eLections.Models.ViewModels.UserViewModel>
 @{
-    ViewBag.Title = "UsersList";
+    ViewBag.Title = "Users";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UsersList</h2>
+<h2>Users</h2>
 
 <table id="users" class="table table-bordered table-hover">
     <thead>
@@ -36,7 +36,7 @@
                         @Html.Raw("Administrator");
                     }
                 </td>
-                <td>@Html.ActionLink(user.UserName, "ManageRoles", "Administration", new { id = user.Id }, null)</td>
+                <td>@Html.ActionLink("Change Roles", "ManageRoles", "Administration", new { id = user.Id }, new {@class = "btn btn-info btn-smaller" })</td>
 
             </tr>
         }
