--- a/eLections/Views/Candidates/CandidatesList.cshtml
+++ b/eLections/Views/Candidates/CandidatesList.cshtml
@@ -74,7 +74,7 @@
                 function() {
                     var button = $(this);
 
-                    bootbox.confirm("U sure?",
+                    bootbox.confirm("Are you sure you want to delete this candidate?",
                         function(result) {
                             if (result) {
                                 $.ajax({
@@ -82,6 +82,7 @@
                                     method: "DELETE",
                                     success: function() {
                                         table.row(button.parents("tr")).remove().draw();
+                                        toastr.success("Candidate has been deleted.");
                                     }
                                 });
                             }
