Changing more methods to Async Some translations Fixing Calculations Adding IndexResult View

--- a/eLections/Views/Home/Index.cshtml
+++ b/eLections/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     }
     else
     {
-        <p class="lead"> Witaj użytkowniku! Strona jest przeznaczona dla Przewodniczących komisji wyborczych, jeśli jesteś jednym z nich zaloguj się! </p>
+        <p class="lead"> Witaj użytkowniku! Strona jest przeznaczona dla przewodniczących komisji wyborczych, jeśli jesteś jednym z nich zaloguj się! </p>
         <p><a href="/Account/Login" class="btn btn-primary btn-lg">Zaloguj się &raquo;</a></p>
     }
 </div>
