--- a/eLections/Content/bootstrap-lumen.css
+++ b/eLections/Content/bootstrap-lumen.css
@@ -8579,4 +8579,24 @@ a.list-group-item-danger.active {
 .btn-smaller {
     padding: 2px 12px;
 }
+.square {
+    height: 100px;
+    width: 100px;
+    background-color: #555;
+    border-radius: 20px;
+    border-color: #000;
+    border: 3px solid #000000;
+    align-items: center;
+    display: flex;
+    text-align: center;
+    float: left;
+}
+
+.square > label {
+    order: 2;
+    margin: 0 auto;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+}
 
