--- a/eLections/Views/Candidates/CandidateForm.cshtml
+++ b/eLections/Views/Candidates/CandidateForm.cshtml
@@ -27,8 +27,9 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Candidate.PartyId)
         @Html.DropDownListFor(m => m.Candidate.PartyId, new SelectList(Model.Parties, "Id", "ShortName"), new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Candidate.ConstituencyId)
+        @Html.ValidationMessageFor(m => m.Candidate.PartyId)
     </div>
+    //@Html.HiddenFor(m=>m.Candidate.Id)
     @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
